# TyportHDL

./: Cargo.toml  readme.md
examples/: array.typort  fib.typort  for.typort  string.typort  while.typort
src/: main.rs
typort-hdl-vscode/: CHANGELOG.md  README.md  package-lock.json  package.json  vsc-extension-quickstart.md
typort-hdl-vscode/src/: extension.ts
typort-hdl-vscode/syntaxes/: typort.tmLanguage.json
typort-interpreter/: Cargo.toml
typort-interpreter/src/: built_in.rs  hir.rs  jit.rs  lib.rs  main.rs  mir.rs  ty.rs  vm.rs
typort-lsp/: Cargo.toml
typort-lsp/src/: backend.rs  lib.rs  main.rs
typort-parser/: Cargo.toml
typort-parser/src/: class.rs  decl.rs  expr.rs  lex.rs  lib.rs  types.rs
