[package]
name = "typort-hdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
clap = { version = "4.4.8", features = ["derive"] }
typort-lsp = { path="typort-lsp" }
typort-interpreter = { path="typort-interpreter" }

[workspace]
members = [
  "typort-parser",
  "typort-lsp",
  "typort-interpreter",
]
