[package]
name = "typort-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typort-parser = { path = "../typort-parser" }

cranelift = "0.97.1"
cranelift-module = "0.97.1"
cranelift-jit = "0.97.1"
cranelift-native = "0.97.1"
